[package]
name = "fiber"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
crossbeam-channel = "0.5.13"
env_logger = "0.11.3"
floem.workspace = true
fml = { path = "../fml" }
fiber-macro = { path = "../fiber-macro" }
lazy_static = "1.5.0"
log = "0.4.22"
notify = "6.1.1"
regex = "1.10.5"
xxhash-rust = { version = "0.8.10", features = ["xxh64", "xxh3"] }
dashmap = { version = "6.0.1", features = ["inline"] }
parking_lot = { version = "0.12.3" }

[[example]]
name = "calc"
