[package]
name = "fiber"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
crossbeam-channel = "0.5.13"
env_logger = "0.11.3"
floem.workspace = true
fml = { path = "../fml" }
fiber-macro = { path = "../fiber-macro" }
lazy_static = "1.5.0"
log = "0.4.22"
notify = "6.1.1"
regex = "1.10.5"
parking_lot = { version = "0.12.3" }
